code/Parsing.cpp
/*
* @Author: sun000
* @Date:   2018-04-28 08:58:44
* @Last Modified by:   sun000
* @Last Modified time: 2018-05-01 15:39:13
*/

#include "Parsing.h"
#include <cstdio>
#include <sstream>

DFANODE *IdAlpha; 
DFANODE *IdNum;

DFANODE* DFANODE::addEdgeAndGoNext(char c, bool mcanToId) {
    DFANODE* tmp = new DFANODE(mcanToId);
    edge.insert(std::make_pair(c, tmp));
    return tmp;
}

DFANODE* DFANODE::getNext(char c, bool needToId) {
    if (edge.find(c) != edge.end())
        return edge[c];
    else if (canToId && needToId) {
        if (isalpha(c)) return IdAlpha;
        else if (isdigit(c)) return IdNum;
    }
    return nullptr;
}


DFA* DFA::instance = nullptr;

DFA::DFA() {
    DFAInit();
}

void DFA::add(std::string Vt, bool canToId) {
    DFANODE* p = root, *tp;
    int i;
    for(i = 0; i < Vt.length(); i++) {
        tp = (p -> getNext(Vt[i], false));
        if(tp != nullptr) p = tp;
        else break;
    }
    for(; i < Vt.length(); i++) {
        p = p -> addEdgeAndGoNext(Vt[i], canToId);
        if(canToId) p -> type = "ID";
    }
    transform(Vt.begin(), Vt.end(), Vt.begin(), ::toupper);
    p -> type = Vt;
}

void DFA::DFAInit() {
    //添加字符节点
    DFANODE* mChar1 = new DFANODE(false, "UNKNOW");
    DFANODE* mChar2 = new DFANODE(false, "CHAR");
    mChar1 -> edge['\''] = mChar2;
    char allChar[16] = {'+', '-', '*', '/', '{', '}', '[', ']', '(', ')', '<', '=', '.', ';', ' ', EOF};
    for(int i = 0; i < 26; i++) {
        mChar1 -> edge['a' + i] = mChar1;
        mChar1 -> edge['A' + i] = mChar1;
    }
    for(int i = 0; i < 10; i++) {
        mChar1 -> edge['0' + i] = mChar1;
    }
    for(int i = 0; i < 16; i++) {
        mChar1 -> edge[allChar[i]] = mChar1;
    }
    //标志符
    IdAlpha = new DFANODE(true, "ID");
    IdNum = new DFANODE(true, "ID");
    //无符号数字
    DFANODE* numNode = new DFANODE(false, "INTC");
    //初始化保留字
    std::ifstream fin("保留字.txt");
    if (!fin.is_open()) printf("打开保留字文件失败\n");
    else {
        root = new DFANODE(false, "");
        root -> edge['\''] = mChar1;
        std::string str;
        while(!fin.eof()) {
            fin >> str;
            add(str, true);
        }
        for(int i = 0; i < 26; i++) {
            if(root -> edge.find(char('a' + i)) == root -> edge.end())
                root -> edge.insert(std::make_pair(char('a' + i), IdAlpha));
            if(root -> edge.find(char('A' + i)) == root -> edge.end())
                root -> edge.insert(std::make_pair(char('A' + i), IdAlpha));
        }
        for(int i = 0; i < 10; i++) {
            root -> edge.insert(std::make_pair(char('0' + i), numNode));
            numNode -> edge.insert(std::make_pair(char('0' + i), numNode));
        }
        fin.close();
    }
    fin.open("特殊符号.txt");
    if (!fin.is_open()) printf("打开特殊符号文件失败\n");
    else {
        std::string str;
        while(!fin.eof()) {
            fin >> str;
            add(str, false);
        }
        fin.close();
    }
}

DFA* DFA::getDFA() {
    if(instance == nullptr)
        instance = new DFA();
    return instance;
}

void DFA::showDFA() {//DEBUG的时候输出DFA观察
    DFANODE* f;
    std::queue<DFANODE*> q;
    q.push(root);
    int s = 1;
    while(!q.empty()) {
        for(int i = 0; i < s; i++) {
            f = q.front(); q.pop();
            for(auto it = f -> edge.begin(); it != f -> edge.end(); it++) {
                printf("%c ", it -> first);
                // std::cout << (it -> second) -> type << " ";
                q.push(it -> second);
                if((it -> second) -> type != "UNKNOW")
                    std::cout << "TYPE|" + (it -> second) -> type << "| ";
                else
                    printf("@ ");
            }
        }
        printf("\n");
        s = q.size();
    }
}

std::string DFA::getTOKEN(std::string &word) {
    DFANODE* p = DFA::instance -> getRoot();
    for(int i = 0; p != nullptr && i < word.length(); p = p -> getNext(word[i], true), i++);
    if(p == nullptr) return "ERROR";
    else return p -> type;
}

void DFA::checkOneLine(std::string str, std::queue<TOKEN*> &Q) {
    DFANODE* p = DFA::instance -> getRoot(), *tp;
    bool flag = false;
    char tmps[1000];
    int cnt = 0;
    for(int i = 0; p != nullptr && i < str.length(); i++) {
        if(str[i] == '\0' || str[i] == ' ' || str[i] == '\t') {
            while(i < str.length() && (str[i] == '\0' || str[i] == ' ' || str[i] == '\t')) {
                printf(" ");
                i++;
            }
            if(i < str.length()) i--;
            flag = true;
            tmps[cnt] = '\0';
        }
        if(!flag) {
            tp = p -> getNext(str[i], true);
            if(tp == nullptr) {
                flag = true;
                i--;
            }
            else {
                p = tp;
                tmps[cnt++] = str[i];
            }
        }
        if(flag) {
            if(p -> type == "UNKNOW") {
                std::cout << "\033[31m" << str + " ERROR!" << std::endl << "\033[0m";
                break;
            }
            else {
                if(cnt != 0) {
                    tmps[cnt] = '\0';
                    std::cout << p -> type + " ";
                    Q.push(new TOKEN(p -> type, new std::string(tmps)));
                }
                cnt = 0;
                flag = false;
                p = DFA::instance -> getRoot();
            }
        }
    }
    printf("\n");
}

int Lexer::nowLine = 0;
std::string Lexer::nowStr = "";
std::ifstream Lexer::inputFile;
std::queue<TOKEN*> Lexer::Q;


TOKEN* Lexer::getTOKEN(std::string word) {
    DFA* dfa = DFA::getDFA();
    std::string type = dfa -> getTOKEN(word);
    if(type == "ERROR" || type == "UNKNOW") {
        std::cout << "\033[31m" << word + " " + type + "!" << std::endl << "\033[0m";
    }
    return new TOKEN(type, &word);
}

TOKEN* Lexer::getNextTOKEN(std::string fileName) {
    while(Lexer::Q.empty()) {
        if(!Lexer::inputFile.is_open()) inputFile.open(fileName);
        if(!Lexer::inputFile.is_open()) {
            printf("文件打开失败!\n");
            return nullptr;
        }
        if(inputFile.eof()) {
            printf("文件已经全部处理完!\n");
            return nullptr;
        }
        std::string str;
        std::getline(inputFile, str);
        str = str + ' ';
        nowLine++;
        nowStr = str;
        DFA::getDFA() -> checkOneLine(str, Lexer::Q);
    }

    TOKEN* ret = Lexer::Q.front();
    Lexer::Q.pop();
    return ret;
}
////////////syatex////////////////////////////////
void TreeNode::deleteAllSon() {
    for(int i = 0; i < son.size(); i++) {
        son[i] -> deleteAllSon();
        delete son[i];
    }
    son.clear();
}

void TreeNode::save(std::ofstream& fout, int tab, bool flag) { 
    if(flag) for(int i = 0; i < tab; i++) {
        if(i & 1) fout << " ";
        else fout << "|"; 
    }
    else for(int i = 0; i < tab; i++) fout << " ";
    fout << symbol << std::endl;
    for(int i = 0; i < son.size(); i++)
        son[i] -> save(fout, tab + 2, flag);
}

void TreeNode::print(int tab, bool flag) { 
    if(flag) for(int i = 0; i < tab; i++) printf("%c", i % 2 ? ' ' : '|');
    else for(int i = 0; i < tab; i++) printf(" ");
    std::cout << symbol << std::endl;
    for(int i = 0; i < son.size(); i++)
        son[i] -> print(tab + 2, flag);
}

TreeNode* SyntaxTree::buildNode(std::string mSymbol) {
    // std::cout << mSymbol << std::endl;
    return new TreeNode(mSymbol);
}

void SyntaxTree::addNode(TreeNode* mFa, TreeNode* mSon) {
    if(mSon == nullptr) return;
    (mFa -> son).push_back(mSon);
    mSon -> fa = mFa;
}

void SyntaxTree::setNum(TreeNode* p, int num) {
    p -> son_Cnt = num;
    // p -> son = std::vector<TreeNode*>;
}

void SyntaxTree::saveTree(std::string path, bool flag) {
    std::ofstream fout(path);
    root -> save(fout, 0, flag);
    fout.close();
}

void SyntaxTree::printTree(bool flag) {
    root -> print(0, flag);
}

//Parseing//////////////////
TreeNode* Parse::match(std::string par) {
    // std::cout << "\033[31m" << "par = " + par << "\033[0m" << std::endl;
    if(par != "Epsilon") {
        if(par == token) {
            TreeNode* p = tree -> buildNode(par);
            TOKEN* ptoken = Lexer::getNextTOKEN(fileName);
            if(ptoken != nullptr) token = ptoken -> type;
            return p;
        }
        else exit(-1);
    }
    return nullptr;
}

void Parse::error() {
    std::cout << "\033[31m" << "Parsing Error!" << std::endl;
    std::cout << "Line " << Lexer::nowLine <<  ": " + Lexer::nowStr  << std::endl;
    std::cout << "Error TOKEN : " << token << std::endl << "\033[0m";
    // Lexer::Q.clear();
    exit(-1);
}

void Parse::predictSetInit() {
    std::ifstream fin("PredictSet.txt");
    std::string str, word, left;
    while(std::getline(fin, str)) {
        std::stringstream sin(str);
        std::set<std::string> tmps;
        sin >> left >> word;
        while(sin >> word) {
            if(word == "|") {
                predictSet[left].push_back(tmps);
                tmps.clear();
            } else {
                tmps.insert(word);
            }
        }
    }
    fin.close();
}


TreeNode* Parse::Program() {
    TreeNode *p = tree -> buildNode("Program");
    if (predictSet["Program"][0].find(token) !=  predictSet["Program"][0].end() ) {
        tree -> setNum(p, predictSet["Program"][0].size());
        tree -> addNode(p, ProgramHead());
        tree -> addNode(p, DeclarePart());
        tree -> addNode(p, ProgramBody());
        tree -> addNode(p, match("."));
    }
    else error();
    return p;
}

TreeNode* Parse::ProgramHead() {
    TreeNode *p = tree -> buildNode("ProgramHead");
    if (predictSet["ProgramHead"][0].find(token) !=  predictSet["ProgramHead"][0].end() ) {
        tree -> setNum(p, predictSet["ProgramHead"][0].size());
        tree -> addNode(p, match("PROGRAM"));
        tree -> addNode(p, ProgramName());
    }
    else error();
    return p;
}

TreeNode* Parse::ProgramName() {
    TreeNode *p = tree -> buildNode("ProgramName");
    if (predictSet["ProgramName"][0].find(token) !=  predictSet["ProgramName"][0].end() ) {
        tree -> setNum(p, predictSet["ProgramName"][0].size());
        tree -> addNode(p, match("ID"));
    }
    else error();
    return p;
}

TreeNode* Parse::DeclarePart() {
    TreeNode *p = tree -> buildNode("DeclarePart");
    if (predictSet["DeclarePart"][0].find(token) !=  predictSet["DeclarePart"][0].end() ) {
        tree -> setNum(p, predictSet["DeclarePart"][0].size());
        tree -> addNode(p, TypeDecpart());
        tree -> addNode(p, VarDecpart());
        tree -> addNode(p, ProcDecpart());
    }
    else error();
    return p;
}

TreeNode* Parse::TypeDecpart() {
    TreeNode *p = tree -> buildNode("TypeDecpart");
    if (predictSet["TypeDecpart"][0].find(token) !=  predictSet["TypeDecpart"][0].end() ) {
        tree -> setNum(p, predictSet["TypeDecpart"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["TypeDecpart"][1].find(token) !=  predictSet["TypeDecpart"][1].end() ) {
        tree -> setNum(p, predictSet["TypeDecpart"][1].size());
        tree -> addNode(p, TypeDec());
    }
    else error();
    return p;
}

TreeNode* Parse::TypeDec() {
    TreeNode *p = tree -> buildNode("TypeDec");
    if (predictSet["TypeDec"][0].find(token) !=  predictSet["TypeDec"][0].end() ) {
        tree -> setNum(p, predictSet["TypeDec"][0].size());
        tree -> addNode(p, match("TYPE"));
        tree -> addNode(p, TypeDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::TypeDecList() {
    TreeNode *p = tree -> buildNode("TypeDecList");
    if (predictSet["TypeDecList"][0].find(token) !=  predictSet["TypeDecList"][0].end() ) {
        tree -> setNum(p, predictSet["TypeDecList"][0].size());
        tree -> addNode(p, TypeId());
        tree -> addNode(p, match("="));
        tree -> addNode(p, TypeDef());
        tree -> addNode(p, match(";"));
        tree -> addNode(p, TypeDecMore());
    }
    else error();
    return p;
}

TreeNode* Parse::TypeDecMore() {
    TreeNode *p = tree -> buildNode("TypeDecMore");
    if (predictSet["TypeDecMore"][0].find(token) !=  predictSet["TypeDecMore"][0].end() ) {
        tree -> setNum(p, predictSet["TypeDecMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["TypeDecMore"][1].find(token) !=  predictSet["TypeDecMore"][1].end() ) {
        tree -> setNum(p, predictSet["TypeDecMore"][1].size());
        tree -> addNode(p, TypeDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::TypeId() {
    TreeNode *p = tree -> buildNode("TypeId");
    if (predictSet["TypeId"][0].find(token) !=  predictSet["TypeId"][0].end() ) {
        tree -> setNum(p, predictSet["TypeId"][0].size());
        tree -> addNode(p, match("ID"));
    }
    else error();
    return p;
}

TreeNode* Parse::TypeDef() {
    TreeNode *p = tree -> buildNode("TypeDef");
    if (predictSet["TypeDef"][0].find(token) !=  predictSet["TypeDef"][0].end() ) {
        tree -> setNum(p, predictSet["TypeDef"][0].size());
        tree -> addNode(p, BaseType());
    }
    else if (predictSet["TypeDef"][1].find(token) !=  predictSet["TypeDef"][1].end() ) {
        tree -> setNum(p, predictSet["TypeDef"][1].size());
        tree -> addNode(p, StructureType());
    }
    else if (predictSet["TypeDef"][2].find(token) !=  predictSet["TypeDef"][2].end() ) {
        tree -> setNum(p, predictSet["TypeDef"][2].size());
        tree -> addNode(p, match("ID"));
    }
    else error();
    return p;
}

TreeNode* Parse::BaseType() {
    TreeNode *p = tree -> buildNode("BaseType");
    if (predictSet["BaseType"][0].find(token) !=  predictSet["BaseType"][0].end() ) {
        tree -> setNum(p, predictSet["BaseType"][0].size());
        tree -> addNode(p, match("INTEGER"));
    }
    else if (predictSet["BaseType"][1].find(token) !=  predictSet["BaseType"][1].end() ) {
        tree -> setNum(p, predictSet["BaseType"][1].size());
        tree -> addNode(p, match("CHAR"));
    }
    else error();
    return p;
}

TreeNode* Parse::StructureType() {
    TreeNode *p = tree -> buildNode("StructureType");
    if (predictSet["StructureType"][0].find(token) !=  predictSet["StructureType"][0].end() ) {
        tree -> setNum(p, predictSet["StructureType"][0].size());
        tree -> addNode(p, ArrayType());
    }
    else if (predictSet["StructureType"][1].find(token) !=  predictSet["StructureType"][1].end() ) {
        tree -> setNum(p, predictSet["StructureType"][1].size());
        tree -> addNode(p, RecType());
    }
    else error();
    return p;
}

TreeNode* Parse::ArrayType() {
    TreeNode *p = tree -> buildNode("ArrayType");
    if (predictSet["ArrayType"][0].find(token) !=  predictSet["ArrayType"][0].end() ) {
        tree -> setNum(p, predictSet["ArrayType"][0].size());
        tree -> addNode(p, match("ARRAY"));
        tree -> addNode(p, match("["));
        tree -> addNode(p, Low());
        tree -> addNode(p, match(".."));
        tree -> addNode(p, Top());
        tree -> addNode(p, match("]"));
        tree -> addNode(p, match("OF"));
        tree -> addNode(p, BaseType());
    }
    else error();
    return p;
}

TreeNode* Parse::Low() {
    TreeNode *p = tree -> buildNode("Low");
    if (predictSet["Low"][0].find(token) !=  predictSet["Low"][0].end() ) {
        tree -> setNum(p, predictSet["Low"][0].size());
        tree -> addNode(p, match("INTC"));
    }
    else error();
    return p;
}

TreeNode* Parse::Top() {
    TreeNode *p = tree -> buildNode("Top");
    if (predictSet["Top"][0].find(token) !=  predictSet["Top"][0].end() ) {
        tree -> setNum(p, predictSet["Top"][0].size());
        tree -> addNode(p, match("INTC"));
    }
    else error();
    return p;
}

TreeNode* Parse::RecType() {
    TreeNode *p = tree -> buildNode("RecType");
    if (predictSet["RecType"][0].find(token) !=  predictSet["RecType"][0].end() ) {
        tree -> setNum(p, predictSet["RecType"][0].size());
        tree -> addNode(p, match("RECORD"));
        tree -> addNode(p, FieldDecList());
        tree -> addNode(p, match("END"));
    }
    else error();
    return p;
}

TreeNode* Parse::FieldDecList() {
    TreeNode *p = tree -> buildNode("FieldDecList");
    if (predictSet["FieldDecList"][0].find(token) !=  predictSet["FieldDecList"][0].end() ) {
        tree -> setNum(p, predictSet["FieldDecList"][0].size());
        tree -> addNode(p, BaseType());
        tree -> addNode(p, IdList());
        tree -> addNode(p, match(";"));
        tree -> addNode(p, FieldDecMore());
    }
    else if (predictSet["FieldDecList"][1].find(token) !=  predictSet["FieldDecList"][1].end() ) {
        tree -> setNum(p, predictSet["FieldDecList"][1].size());
        tree -> addNode(p, ArrayType());
        tree -> addNode(p, IdList());
        tree -> addNode(p, match(";"));
        tree -> addNode(p, FieldDecMore());
    }
    else error();
    return p;
}

TreeNode* Parse::FieldDecMore() {
    TreeNode *p = tree -> buildNode("FieldDecMore");
    if (predictSet["FieldDecMore"][0].find(token) !=  predictSet["FieldDecMore"][0].end() ) {
        tree -> setNum(p, predictSet["FieldDecMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["FieldDecMore"][1].find(token) !=  predictSet["FieldDecMore"][1].end() ) {
        tree -> setNum(p, predictSet["FieldDecMore"][1].size());
        tree -> addNode(p, FieldDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::IdList() {
    TreeNode *p = tree -> buildNode("IdList");
    if (predictSet["IdList"][0].find(token) !=  predictSet["IdList"][0].end() ) {
        tree -> setNum(p, predictSet["IdList"][0].size());
        tree -> addNode(p, match("ID"));
        tree -> addNode(p, IdMore());
    }
    else error();
    return p;
}

TreeNode* Parse::IdMore() {
    TreeNode *p = tree -> buildNode("IdMore");
    if (predictSet["IdMore"][0].find(token) !=  predictSet["IdMore"][0].end() ) {
        tree -> setNum(p, predictSet["IdMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["IdMore"][1].find(token) !=  predictSet["IdMore"][1].end() ) {
        tree -> setNum(p, predictSet["IdMore"][1].size());
        tree -> addNode(p, match(","));
        tree -> addNode(p, IdList());
    }
    else error();
    return p;
}

TreeNode* Parse::VarDecpart() {
    TreeNode *p = tree -> buildNode("VarDecpart");
    if (predictSet["VarDecpart"][0].find(token) !=  predictSet["VarDecpart"][0].end() ) {
        tree -> setNum(p, predictSet["VarDecpart"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["VarDecpart"][1].find(token) !=  predictSet["VarDecpart"][1].end() ) {
        tree -> setNum(p, predictSet["VarDecpart"][1].size());
        tree -> addNode(p, VarDec());
    }
    else error();
    return p;
}

TreeNode* Parse::VarDec() {
    TreeNode *p = tree -> buildNode("VarDec");
    if (predictSet["VarDec"][0].find(token) !=  predictSet["VarDec"][0].end() ) {
        tree -> setNum(p, predictSet["VarDec"][0].size());
        tree -> addNode(p, match("VAR"));
        tree -> addNode(p, VarDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::VarDecList() {
    TreeNode *p = tree -> buildNode("VarDecList");
    if (predictSet["VarDecList"][0].find(token) !=  predictSet["VarDecList"][0].end() ) {
        tree -> setNum(p, predictSet["VarDecList"][0].size());
        tree -> addNode(p, TypeDef());
        tree -> addNode(p, VarIdList());
        tree -> addNode(p, match(";"));
        tree -> addNode(p, VarDecMore());
    }
    else error();
    return p;
}

TreeNode* Parse::VarDecMore() {
    TreeNode *p = tree -> buildNode("VarDecMore");
    if (predictSet["VarDecMore"][0].find(token) !=  predictSet["VarDecMore"][0].end() ) {
        tree -> setNum(p, predictSet["VarDecMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["VarDecMore"][1].find(token) !=  predictSet["VarDecMore"][1].end() ) {
        tree -> setNum(p, predictSet["VarDecMore"][1].size());
        tree -> addNode(p, VarDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::VarIdList() {
    TreeNode *p = tree -> buildNode("VarIdList");
    if (predictSet["VarIdList"][0].find(token) !=  predictSet["VarIdList"][0].end() ) {
        tree -> setNum(p, predictSet["VarIdList"][0].size());
        tree -> addNode(p, match("ID"));
        tree -> addNode(p, VarIdMore());
    }
    else error();
    return p;
}

TreeNode* Parse::VarIdMore() {
    TreeNode *p = tree -> buildNode("VarIdMore");
    if (predictSet["VarIdMore"][0].find(token) !=  predictSet["VarIdMore"][0].end() ) {
        tree -> setNum(p, predictSet["VarIdMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["VarIdMore"][1].find(token) !=  predictSet["VarIdMore"][1].end() ) {
        tree -> setNum(p, predictSet["VarIdMore"][1].size());
        tree -> addNode(p, match(","));
        tree -> addNode(p, VarIdList());
    }
    else error();
    return p;
}

TreeNode* Parse::ProcDecpart() {
    TreeNode *p = tree -> buildNode("ProcDecpart");
    if (predictSet["ProcDecpart"][0].find(token) !=  predictSet["ProcDecpart"][0].end() ) {
        tree -> setNum(p, predictSet["ProcDecpart"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["ProcDecpart"][1].find(token) !=  predictSet["ProcDecpart"][1].end() ) {
        tree -> setNum(p, predictSet["ProcDecpart"][1].size());
        tree -> addNode(p, ProcDec());
    }
    else error();
    return p;
}

TreeNode* Parse::ProcDec() {
    TreeNode *p = tree -> buildNode("ProcDec");
    if (predictSet["ProcDec"][0].find(token) !=  predictSet["ProcDec"][0].end() ) {
        tree -> setNum(p, predictSet["ProcDec"][0].size());
        tree -> addNode(p, match("PROCEDURE"));
        tree -> addNode(p, ProcName());
        tree -> addNode(p, match("("));
        tree -> addNode(p, ParamList());
        tree -> addNode(p, match(")"));
        tree -> addNode(p, match(";"));
        tree -> addNode(p, ProcDecPart());
        tree -> addNode(p, ProcBody());
        tree -> addNode(p, ProcDecMore());
    }
    else error();
    return p;
}

TreeNode* Parse::ProcDecMore() {
    TreeNode *p = tree -> buildNode("ProcDecMore");
    if (predictSet["ProcDecMore"][0].find(token) !=  predictSet["ProcDecMore"][0].end() ) {
        tree -> setNum(p, predictSet["ProcDecMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["ProcDecMore"][1].find(token) !=  predictSet["ProcDecMore"][1].end() ) {
        tree -> setNum(p, predictSet["ProcDecMore"][1].size());
        tree -> addNode(p, ProcDec());
    }
    else error();
    return p;
}

TreeNode* Parse::ProcName() {
    TreeNode *p = tree -> buildNode("ProcName");
    if (predictSet["ProcName"][0].find(token) !=  predictSet["ProcName"][0].end() ) {
        tree -> setNum(p, predictSet["ProcName"][0].size());
        tree -> addNode(p, match("ID"));
    }
    else error();
    return p;
}

TreeNode* Parse::ParamList() {
    TreeNode *p = tree -> buildNode("ParamList");
    if (predictSet["ParamList"][0].find(token) !=  predictSet["ParamList"][0].end() ) {
        tree -> setNum(p, predictSet["ParamList"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["ParamList"][1].find(token) !=  predictSet["ParamList"][1].end() ) {
        tree -> setNum(p, predictSet["ParamList"][1].size());
        tree -> addNode(p, ParamDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::ParamDecList() {
    TreeNode *p = tree -> buildNode("ParamDecList");
    if (predictSet["ParamDecList"][0].find(token) !=  predictSet["ParamDecList"][0].end() ) {
        tree -> setNum(p, predictSet["ParamDecList"][0].size());
        tree -> addNode(p, Param());
        tree -> addNode(p, ParamMore());
    }
    else error();
    return p;
}

TreeNode* Parse::ParamMore() {
    TreeNode *p = tree -> buildNode("ParamMore");
    if (predictSet["ParamMore"][0].find(token) !=  predictSet["ParamMore"][0].end() ) {
        tree -> setNum(p, predictSet["ParamMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["ParamMore"][1].find(token) !=  predictSet["ParamMore"][1].end() ) {
        tree -> setNum(p, predictSet["ParamMore"][1].size());
        tree -> addNode(p, match(";"));
        tree -> addNode(p, ParamDecList());
    }
    else error();
    return p;
}

TreeNode* Parse::Param() {
    TreeNode *p = tree -> buildNode("Param");
    if (predictSet["Param"][0].find(token) !=  predictSet["Param"][0].end() ) {
        tree -> setNum(p, predictSet["Param"][0].size());
        tree -> addNode(p, TypeDef());
        tree -> addNode(p, FormList());
    }
    else if (predictSet["Param"][1].find(token) !=  predictSet["Param"][1].end() ) {
        tree -> setNum(p, predictSet["Param"][1].size());
        tree -> addNode(p, match("VAR"));
        tree -> addNode(p, TypeDef());
        tree -> addNode(p, FormList());
    }
    else error();
    return p;
}

TreeNode* Parse::FormList() {
    TreeNode *p = tree -> buildNode("FormList");
    if (predictSet["FormList"][0].find(token) !=  predictSet["FormList"][0].end() ) {
        tree -> setNum(p, predictSet["FormList"][0].size());
        tree -> addNode(p, match("ID"));
        tree -> addNode(p, FidMore());
    }
    else error();
    return p;
}

TreeNode* Parse::FidMore() {
    TreeNode *p = tree -> buildNode("FidMore");
    if (predictSet["FidMore"][0].find(token) !=  predictSet["FidMore"][0].end() ) {
        tree -> setNum(p, predictSet["FidMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["FidMore"][1].find(token) !=  predictSet["FidMore"][1].end() ) {
        tree -> setNum(p, predictSet["FidMore"][1].size());
        tree -> addNode(p, match(","));
        tree -> addNode(p, FormList());
    }
    else error();
    return p;
}

TreeNode* Parse::ProcDecPart() {
    TreeNode *p = tree -> buildNode("ProcDecPart");
    if (predictSet["ProcDecPart"][0].find(token) !=  predictSet["ProcDecPart"][0].end() ) {
        tree -> setNum(p, predictSet["ProcDecPart"][0].size());
        tree -> addNode(p, DeclarePart());
    }
    else error();
    return p;
}

TreeNode* Parse::ProcBody() {
    TreeNode *p = tree -> buildNode("ProcBody");
    if (predictSet["ProcBody"][0].find(token) !=  predictSet["ProcBody"][0].end() ) {
        tree -> setNum(p, predictSet["ProcBody"][0].size());
        tree -> addNode(p, ProgramBody());
    }
    else error();
    return p;
}

TreeNode* Parse::ProgramBody() {
    TreeNode *p = tree -> buildNode("ProgramBody");
    if (predictSet["ProgramBody"][0].find(token) !=  predictSet["ProgramBody"][0].end() ) {
        tree -> setNum(p, predictSet["ProgramBody"][0].size());
        tree -> addNode(p, match("BEGIN"));
        tree -> addNode(p, StmList());
        tree -> addNode(p, match("END"));
    }
    else error();
    return p;
}

TreeNode* Parse::StmList() {
    TreeNode *p = tree -> buildNode("StmList");
    if (predictSet["StmList"][0].find(token) !=  predictSet["StmList"][0].end() ) {
        tree -> setNum(p, predictSet["StmList"][0].size());
        tree -> addNode(p, Stm());
        tree -> addNode(p, StmMore());
    }
    else error();
    return p;
}

TreeNode* Parse::StmMore() {
    TreeNode *p = tree -> buildNode("StmMore");
    if (predictSet["StmMore"][0].find(token) !=  predictSet["StmMore"][0].end() ) {
        tree -> setNum(p, predictSet["StmMore"][0].size());
        tree -> addNode(p, match("Epsilon"));
    }
    else if (predictSet["StmMore"][1].find(token) !=  predictSet["StmMore"][1].end() ) {
        tree -> setNum(p, predictSet["StmMore"][1].size());
        tree -> addNode(p, match(";"));
        tree -> addNode(p, StmList());
    }
    else error();
    return p;
}
